Use the font for fiit animation

--- a/fiit-animation-timer/odometer.css
+++ b/fiit-animation-timer/odometer.css
@@ -90,9 +90,13 @@
 }
 
 .odometer.odometer-auto-theme, .odometer.odometer-theme-default {
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: 'Graphic', sans-serif;
   line-height: 1.1em;
 }
 .odometer.odometer-auto-theme .odometer-value, .odometer.odometer-theme-default .odometer-value {
   text-align: center;
+}
+
+.odometer .odometer-digit .odometer-value {
+  width: 100%;
 }
