--- a/fiit-animation-timer/styles.css
+++ b/fiit-animation-timer/styles.css
@@ -1,3 +1,9 @@
+
+@font-face {
+  font-family: 'Graphic';
+  src: url('Graphik-Regular.ttf');
+}
+
 height, body {
   height: 100%;
 }
@@ -6,7 +12,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Graphic', sans-serif;
 }
 
 .odometer {
@@ -14,7 +20,7 @@ body {
 }
 
 .odometer {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Graphic', sans-serif !important;
   font-weight: 300;
   border: 1px solid #CCC;
   font-size: 100px;
